<resources>
    <string name="app_name">SURVIVAL</string>
    <string name="title_activity_prepmain">prepmain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="preparation">"Survival planning is nothing more than realizing something could happen that would put you in a survival situation and, with that in mind, taking steps to increase your chances of survival.

 Preparation means preparing yourself and your survival kit for those contingencies that you have in your plan. Prepare yourself by making sure your immunizations and dental work are up-to-date. Break in your boots and make sure that the boots have good soles and water-repellent properties. Study the area, climate, terrain, and indigenous methods of food and water procurement. You should continuously assess data, even after the plan is made, to update the plan as necessary and give you the greatest possible chance of survival. Another example of preparation is finding the emergency exits on an aircraft when you board it for a flight. Practice things that you have planned with the items in your survival kit - get to know your gear. Checking ensures that items work and that you know how to use them. Build a fire in the rain so you know that when it is critical to get warm, you can do it. Review the medical items in your kit and have instructions printed on their use so that even in times of stress, you will not make life-threatening errors.

IMPORTANCE OF PLANNING

Detailed prior planning is essential in potential survival situations. Including survival considerations in mission planning will enhance your chances of survival if an emergency occurs. For example, if your job requires that you work in a small, enclosed area that limits what you can carry on your person, plan where you can put your rucksack or your load-bearing equipment (LBE). Put it where it will not prevent you from getting out of the area quickly, yet where it is readily accessible.

One important aspect of prior planning is preventive medicine. Ensuring that you have no dental problems and that your immunizations are current will help you avoid potential dental or health problems. Some dental problems can progress to the point that you may not be able to eat enough to survive. Failure to keep your shots current may mean your body is not immune to diseases that are prevalent in the area.</string>
    <string name="forseti">"When driving or walking through the desert, the road seems endless. There is nothing around for miles and miles. Nothing but desert plants, dry sand, and heat. If your car should break down, and you find yourself stuck in the desert, learn how to conserve water and survive until rescue.
In a Hurry?
1. Become mobile only after the sun goes down to minimize heat exhaustion.
2. Stay in a shaded shelter during the day.
3. Build a fire and use the smoke to signal help.
4. Find ground water sources near or underneath green vegetation, canyons, dry river beds or rocks.
5. Rest if you experience heat exhaustion.
6. Stay away from dangerous animals.</string>
    <string name="desert1">"1
Wear clothing that minimizes sweat loss. Most of your body's water loss happens through perspiration. Cover as much skin as possible with loose, light-weight clothing. This will trap the sweat against your skin, slowing evaporation and therefore water loss. For this reason, it's probably best to go with a cotton undershirt rather than a wicking fabric.[1]Cover it all with a light windbreaker.
Wear a wide-brimmed hat, sunglasses, and gloves.
Pack wool or fleece clothing. If an emergency occurs, you may be traveling at night, when it can get quite cold.
Light-colored clothing reflects more heat, but dark clothing usually provides better protection from UV light, which causes sunburn. If possible, find white clothing that's labeled with a UPF (Ultraviolet Protection Factor) of 30+.[2]
</string>
    <string name="desert2">"2
Bring lots of extra water. Whenever you enter a desert, bring more water than you expect. While walking in sunshine and 40ºC (104ºF) heat, the average person loses 900 mL (30 oz) of sweat every hour.[3] In an emergency situation, you'll be thankful for any water you carried.
Divide the water you're carrying among several containers. This minimizes the amount of water you can lose to one leak.[4]
Store the excess in a cool spot in your vehicle, away from direct sunlight.
</string>
    <string name="desert3">"3
Bring food that packs the most nutrition in the least size and weight. Energy bars, pemmican, jerky, and trail mix are popular choices. Do your research, experiment beforehand, and be prepared. When wheeled vehicles break down, it's just your two legs and the path to the next town, and you don't want to be carrying anything nonessential.
Include some foods with salt and potassium, which are lost in sweat. These will help you avoid heat exhaustion and retain more water. However, if you are dehydrated, excess salt can make you feel worse.
Food is not a priority in a desert emergency. If you are out of water, only eat the minimum required to function.[5]

</string>
    <string name="desert4">"Pack survival equipment. Here are the bare essentials for a survival kit:[6]
Sturdy emergency blankets
Cords or rope
Water purification tablets
First aid kit
Fire starters
Powerful flashlight or headlamp. LEDs last longest.
Knife
Compass
Signal mirror
Goggles and a dust mask or bandana (for dust storms)</string>
    <string name="desert5">"Survival Tactics

1.Become nocturnal. 
        In a desert survival situation, you do not want to be moving around during the day. The cooler night air enables you to travel farther and faster with minimum danger of heat exhaustion. In hot climates, this single decision will save your body about three liters (three quarts) of water per day.[7]

</string>
    <string name="desert6">"2.Stay in a shelter during the day. 
        If you don't have a shaded car to stay in, string cords between a pair of objects in a place that gets shade most of the day. Drape a sturdy emergency blanket over the cords. Place a few pieces of brush on top of the blanket, then cover it with another emergency blanket (this one can be a thin Mylar sheet). The gap of air between the two blankets insulates the shelter, keeping it cooler.
Build this in the evening or at night. If you build it during the day, you'll trap heat in.
You can use an existing rock overhang or cave instead, but approach carefully as an animal may be using it.

</string>
    <string name="desert7">"3.Signal for help.
         Building a fire is a great way to make a signal, creating smoke during the day and light at night. While in transit, keep a signal mirror in reach to reflect light at passing aircraft or distant cars.[8]
If you plan to stay in one spot until rescue, place rocks or objects on the ground to write SOS or a similar message, readable by aircraft.
</string>
    <string name="desert8">"4.Decide whether to stay in place. 
        If you have a supply of water and someone knows where you are, staying in one place may be your best chance of rescue. Traveling to find help will exhaust you much faster than staying in place, and water loss will cut your survival time way down if you can't find another supply. That said, if your water supplies are low, you will need to look for more. You cannot expect to survive more than a couple days if you run out of water.
</string>
    <string name="desert9">"5.Find water sources. 
        If there's been a rainstorm recently, you may find pockets of water in rock outcrops or flat stone surfaces. More often, you'll need to search for areas with possible groundwater:
Follow animal tracks leading downhill, birds circling around something, or even flying insects.
Walk to the greenest vegetation you can see, especially large plants with wide leaves.
Follow canyons or dry river beds upstream, and look for a depression, especially on the outside edge of a bend.
Look for a slope of hard, non-porous rock, where rainwater would run into the soil. Dig in the sand or soil at the base of this slope.
    </string>
    <string name="desert10">"6.Dig for water.
         Once you've found one of the areas above, dig about 30 cm (1 ft) down. If you feel any moisture, enlarge the hole to about 30 cm (1 ft) in diameter. Wait for a few hours for the hole to fill with water.[9]
Purify water whenever possible. If you don't have the option, drink. Even if you do get sick, it will usually take a few days for symptoms to appear, while dehydration will get you much faster.
</string>
    <string name="desert11">"7.Look for water elsewhere. Besides groundwater, you can find dew gathering on plants before dawn. You may also find water in hollow tree trunks. Gather these sources with an absorbent cloth, then squeeze it into a container.
Half-buried rocks have a cool base in the early morning. Turn them over before dawn so a little condensation forms.</string>
    <string name="desert12">"Recognizing Dangers

1.Watch out for signs of dehydration.
         Many people make their journey much harder by underestimating their water needs. Trying to ration your supply is a mistake that can cost your life. If you notice any of the following symptoms, drink more water:[10]
Urine with a dark color or a noticeable smell.
Dry skin
Dizziness
Fainting
</string>
    <string name="desert13">"2.Rest if you experience heat exhaustion. 

        If you feel lightheaded or nauseous, or if your skin feels cool and clammy, seek shade immediately. Rest and treat yourself as follows:[11]
Remove or loosen your clothing
Sip a sports drink or slightly salty water (about 5 mL salt per liter water / 1 tsp per quart).
Apply wet cloth on your skin to aid cooling evaporation.
Warning: if untreated, this can progress to heatstroke. This causes muscle cramps, red skin that no longer sweats, and eventually organ damage or death.
</string>
    <string name="desert14">"3.Stay away from dangerous animals.
         Most mammals and reptiles will stay away from you, especially if they are alone. Follow the same practice and be aware of your surroundings to avoid accidentally cornering something. If possible, research the wildlife of the local region beforehand so you know how to respond to specific species.
Do not reach into small spaces or under rocks without poking it with a stick first. Scorpions, spiders, or snakes could be hiding there.
In areas with killer bees, be alert and stay away from hives.
</string>
    <string name="desert15">"4.Steer clear of spiny plants.
         Although it's not hard not to touch a cactus, you may not know that some of them scatter spiky burrs on the ground to spread their seeds. Although usually not a high priority, it's a good idea to steer clear of the area.[12] In the worst case scenario, you could cut yourself and get an infection.
</string>
    <string name="for1">"Think about all possible options if you find yourself in the wild without help. 
        Be decisive about what the best survival course of action is. For example, if you think the best survival course of action is to seek out help and civilization, don't wait for four or five days before you come to this conclusion. Take action on the first or second day if possible, while you still have strength and endurance working for you</string>
    <string name="for2">"Preparing shelter

Build a shelter with branches (bamboo works best) and rope. Form an angular shape with it. Use as many branches as possible for added stability and protection against the wind and weather.
</string>
</resources>